Blocks: Fix issue with overflow on mobile

--- a/src/assets/scss/blocks/_list-blocks.scss
+++ b/src/assets/scss/blocks/_list-blocks.scss
@@ -104,7 +104,8 @@
     transform: translate(-50%, -50%);
     font-weight: $font-weight-bold;
     font-size: $size-30;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .block__button {
